After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743956 - Still shows "Send to..." menu option even when nautilus-sendto is not installed
Still shows "Send to..." menu option even when nautilus-sendto is not installed
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-04 02:51 UTC by Cameron Norman
Modified: 2015-02-04 14:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Check for nautilus-sendto being installed (561 bytes, patch)
2015-02-04 02:52 UTC, Cameron Norman
committed Details | Review

Description Cameron Norman 2015-02-04 02:51:43 UTC
Originally reported here: https://bugs.launchpad.net/elementaryos/+bug/1377549

Patch is attached.
Comment 1 Cameron Norman 2015-02-04 02:52:44 UTC
Created attachment 296061 [details] [review]
Check for nautilus-sendto being installed
Comment 2 Carlos Garcia Campos 2015-02-04 14:46:21 UTC
Comment on attachment 296061 [details] [review]
Check for nautilus-sendto being installed

Pushed, thanks!