Disable send to action when nautilus-sendto is not found

https://bugzilla.gnome.org/show_bug.cgi?id=743956